--- a/Login/login.html
+++ b/Login/login.html
@@ -39,7 +39,7 @@
                     <div class="form-text">
                         <h2>Sign In</h2>
                     </div>
-                    <form action="">
+                    <form action="" id="form">
                         <div>
                             <label for="email">Email
                                 <img class="input-icon" src="../input-email.svg" alt="an icon of an envelop">
@@ -63,11 +63,11 @@
                                     alt="an icon of an eye with a slash on it">
                             </label>
                             <input type="password" name="password" id="password" placeholder="*******">
-                            <p class="error-message">
+                            <p class="error-message incorrect">
                                 <span class="error-icon">
                                     <img src="../x-icon.svg" alt="an x icon">
                                 </span>
-                                <span class="error-text">
+                                <span class="error-text incorrect-text">
                                     Password cannot be blank
                                 </span>
                             </p>
@@ -91,6 +91,8 @@
             </div>
         </section>
     </main>
+
+    <script src="./login.js"></script>
 </body>
 
 </html>
