--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -73,11 +73,11 @@
                                 <img class="input-icon" src="../input-email.svg" alt="an icon of an envelop">
                             </label>
                             <input type="email" name="email" id="email" placeholder="johndoe@gmail.com" class="hide-error">
-                            <p class="error-message">
+                            <p class="error-message incorrect">
                                 <span class="error-icon">
                                     <img src="../x-icon.svg" alt="an x icon">
                                 </span>
-                                <span class="error-text">
+                                <span class="error-text incorrect-text">
                                     Email cannot be blank
                                 </span>
                             </p>
