--- a/forgot.html
+++ b/forgot.html
@@ -17,11 +17,13 @@
         <div class="container">
             <div class="flex">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="./images/logo.svg" alt="Logo">
+                    <a href="../index.html">
+                        <img src="../images/logo.svg" alt="Logo">
                     </a>
                 </div>
-                <div></div>
+                <div>
+                    <a href="../Signup/signup.html"><button>Sign Up</button></a>
+                </div>
             </div>
         </div>
     </header>
@@ -37,16 +39,16 @@
                         <p>Enter your email and we will send you a link to
                             reset your password.</p>
                     </div>
-                    <form action="">
+                    <form action="" id="form">
                         <label for="email">Email
                             <img class="input-email" src="input-email.svg" alt="an icon of an envelop">
                         </label>
                         <input type="email" name="email" id="email" placeholder="johndoe@gmail.com">
-                        <p class="error-message">
+                        <p class="error-message incorrect">
                             <span class="error-icon">
                                 <img src="x-icon.svg" alt="an x icon">
                             </span>
-                            <span class="error-text">
+                            <span class="error-text incorrect-text">
                                 Provide a valid email address
                             </span>
                         </p>
@@ -57,6 +59,8 @@
             </div>
         </section>
     </main>
+
+    <script src="forgot.js"></script>
 </body>
 
 </html>
