changed dashboard document arrangements

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -96,23 +96,9 @@
                                     </div>
                                     <div>
                                         <p>
-                                            <img src="edit.svg" alt="a pen icon">Edit
-                                        </p>
-                                    </div>
-                                </button>
-                                <button class="docu-btn docu-primary">
-                                    <div>
-                                        <img src="docu-image.png" alt="an image of a document">
-                                    </div>
-                                    <div>
-                                        <p>
                                             <img src="eye.svg" alt="an eye icon">Preview
                                         </p>
                                     </div>
-                                </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p> <img src="file.svg" alt="file icon">New</p>
                                 </button>
                             </div>
                         </div>
@@ -123,9 +109,15 @@
                                     <img src="plus.svg" alt="plus icon">
                                     <p><img src="file.svg" alt="file icon">New</p>
                                 </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p><img src="file.svg" alt="file icon">New</p>
+                                <button class="docu-btn docu-primary">
+                                    <div>
+                                        <img src="docu-image.png" alt="an image of a document">
+                                    </div>
+                                    <div>
+                                        <p>
+                                            <img src="eye.svg" alt="an eye icon">Preview
+                                        </p>
+                                    </div>
                                 </button>
                             </div>
                         </div>
@@ -149,6 +141,11 @@
                                         </p>
                                     </div>
                                 </button>
+                            </div>
+                        </div>
+                        <div class="privacy">
+                            <h2>Terms and Conditions</h2>
+                            <div class="privacy-wrapper terms-wrapper">
                                 <button class="docu-btn docu-primary">
                                     <div>
                                         <img src="docu-image.png" alt="an image of a document">
@@ -158,23 +155,6 @@
                                             <img src="eye.svg" alt="an eye icon">Preview
                                         </p>
                                     </div>
-                                </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p> <img src="file.svg" alt="file icon">New</p>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="privacy">
-                            <h2>Terms and Conditions</h2>
-                            <div class="privacy-wrapper terms-wrapper">
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p><img src="file.svg" alt="file icon">New</p>
-                                </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p><img src="file.svg" alt="file icon">New</p>
                                 </button>
                             </div>
                         </div>
@@ -189,12 +169,6 @@
                         <div class="terms">
                             <h2>Drafts</h2>
                             <div class="terms-wrapper">
-                                <button class="docu-btn">
-                                    <div>
-                                        <img src="plus.svg" alt="plus icon">
-                                    </div>
-                                    <p> <img src="file.svg" alt="file icon">New</p>
-                                </button>
                                 <button class="docu-btn docu-primary">
                                     <div>
                                         <img src="docu-image.png" alt="an image of a document">
@@ -205,6 +179,11 @@
                                         </p>
                                     </div>
                                 </button>
+                            </div>
+                        </div>
+                        <div class="privacy">
+                            <h2>Privacy Policy</h2>
+                            <div class="privacy-wrapper terms-wrapper">
                                 <button class="docu-btn docu-primary">
                                     <div>
                                         <img src="docu-image.png" alt="an image of a document">
@@ -214,23 +193,6 @@
                                             <img src="eye.svg" alt="an eye icon">Preview
                                         </p>
                                     </div>
-                                </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p> <img src="file.svg" alt="file icon">New</p>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="privacy">
-                            <h2>Privacy Policy</h2>
-                            <div class="privacy-wrapper terms-wrapper">
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p><img src="file.svg" alt="file icon">New</p>
-                                </button>
-                                <button class="docu-btn">
-                                    <img src="plus.svg" alt="plus icon">
-                                    <p><img src="file.svg" alt="file icon">New</p>
                                 </button>
                             </div>
                         </div>
